<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">欣社区</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">分享</string>

    <!-- 首页广播action -->
    <string name="index_broad">com.broad.index.jump</string>
    <!-- 物业缴费微信支付 -->
    <string name="wuyeweixinpay_broad">com.broad.wuyeweixinpay.jump</string>

    <!-- 菜单 -->
    <string name="index">首页</string>
    <string name="clasz">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="subtractNum">－</string>
    <string name="addNum">+</string>
    <string name="one">1</string>

    <!-- 搜索 -->
    <string name="searchHint">输入您要搜索的商品</string>
    <string name="search">搜索</string>
    <string name="history">历史记录</string>
    <string name="nohistory">暂无搜索历史</string>
    <string name="clearHistory">清除历史搜索</string>

    <!-- 加载 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载\u2026</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading">正在加载</string>
    <string name="loading_failed">哎哟！网络加载失败啦,轻击屏幕重新加载.</string>
    <string name="no_data">暂无数据\u2026</string>

    <!-- 购物车部分文字 -->
    <string name="text_edit">编辑</string>
    <string name="go_order">去结算</string>
    <string name="price_danwei">￥</string>
    <string name="price_connt">总计：￥</string>
    <string name="cart_login_tips">您还没有登陆哦,登陆之后更精彩！</string>
    <string name="login_text">立即登陆</string>
    <string name="login_textTl">登陆</string>
    <string name="cart_isNull">购物车还没有任何商品</string>
    <string name="cart_goShopping">去逛逛</string>
    <string name="all_selete">全选</string>

    <!-- 我的商品列表 -->
    <string name="num">销量</string>
    <string name="price">价格</string>
    <string name="popularity">人气</string>

    <!-- 我的评价 -->
    <string name="praisegood">好评</string>
    <string name="praisecomment">中评</string>
    <string name="praisebad">差评</string>

    <!-- 我的订单 -->
    <string name="allOrder">全部</string>
    <string name="ytjOrder">待付款</string>
    <string name="dfhOrder">待发货</string>
    <string name="dshOrder">待收货</string>
    <string name="dpjOrder">待评价</string>
    <string name="dthOrder">退款</string>

    <!-- 订单详情部分文字 -->
    <string name="order_details">订单详情</string>
    <string name="selete">删除</string>
    <string name="order_goodList">商品列表</string>
    <string name="order_deliver">配送方式：</string>
    <string name="people_deliver">人工送货</string>
    <string name="orderTime">下单时间：</string>
    <string name="orderTotalNum">商品总数：</string>
    <string name="orderPeisong">配送人：</string>
    <string name="orderPeisongPraise">配送费：</string>
    <string name="youhuijia">优惠价：</string>
    <string name="orderConPrice">总价格：￥</string>
    <string name="store_name">卖家店铺：</string>
    <string name="store_phone">联系方式：</string>
    <string name="get_failed">暂无</string>
    <string name="order_remark">卖家附言：</string>
    <string name="order_num">订单号:</string>
    <string name="buyer_note">买家附言：</string>
    <string name="buyer_notes">买家附言</string>
    <string name="par_Methods">支付方式：</string>
    <string name="goods_left">货到付款</string>
    <string name="cancelinfo">取消原因：</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="register_name_digits">~!@#$%^*()_?/\+-=,._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <!-- 我的界面 -->
    <string name="qfcx">欠费查询</string>
    <string name="jfjl">缴费记录</string>
    <string name="kjjf">快捷缴费</string>
    <string name="qbbx">全部报修</string>
    <string name="ycl">已处理</string>
    <string name="wcl">未处理</string>
    <string name="syfu">所有服务</string>
    <string name="ywc">已完成</string>
    <string name="wwc">待完成</string>
    
    <!-- 缴费 -->
    <string name="allMoney">全部账单</string>
    <string name="weijiaoMoney">未缴账单</string>
    
    <!-- 版本更新 -->
    <string name="clickUpdateVision">点击更新</string>
    <string name="can_not_find_version_name">暂无法获取版本号</string>


    <!--分享-->
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="umeng_socialize_network_break_alert" translatable="false">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment" translatable="false">评论</string>
    <string name="umeng_socialize_comment_detail" translatable="false">评论详情</string>
    <string name="umeng_socialize_back" translatable="false">返回</string>
    <string name="umeng_socialize_near_At" translatable="false">最近\@的好友</string>
    <string name="umeng_socialize_friends" translatable="false">关注的好友</string>
    <string name="umeng_socialize_send" translatable="false">发布</string>
    <string name="umeng_socialize_tip_blacklist" translatable="false">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed" translatable="false">登录失败&#8230;</string>
    <string name="umeng_socialize_msg_sec" translatable="false">秒前</string>
    <string name="umeng_socialize_msg_min" translatable="false">分钟前</string>
    <string name="umeng_socialize_msg_hor" translatable="false">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide" translatable="false">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform" translatable="false">登录帐号</string>

    <dimen name="alphabet_size">12dip</dimen>
    <dimen name="umeng_socialize_pad_window_height">350dip</dimen>
    <dimen name="umeng_socialize_pad_window_width">580dip</dimen>

    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台，
												（二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。
												（三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧&#8230;</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <!-- 平台名称 -->
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des"></string>
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>

    <!--分享-->

     <!--推送-->
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>

    <!--摄像头-->
    <string name="screenshot">截图</string>
    <string name="mute">静音</string>
    <string name="talk">对讲</string>
    <string name="screenshot_success">截图成功</string>
    <string name="screenshot_error">截图失败</string>

</resources>