<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/tttop"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_main_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/returnImg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3.8"
            android:background="@drawable/text_click"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@mipmap/good_left_arrows"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/searchWrap"
            android:layout_width="fill_parent"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1.2"
            android:background="@drawable/search_border"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/searchCate"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:drawableRight="@mipmap/sort_icon_05"
                android:gravity="center"
                android:text="商品"
                android:textSize="@dimen/size_12"
                tools:ignore="NestedWeights,RtlHardcoded" />

            <EditText
                android:id="@+id/searchText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ellipsize="end"
                android:hint="@string/searchHint"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="@dimen/size_12"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3.8"
            android:background="@drawable/text_click" >

            <TextView
                android:id="@+id/searchSubmit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/size_13" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSearchHistory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tttop"
        android:orientation="vertical" 
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/banner_border_all"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/history"
            android:textColor="@color/color_333"
            android:textSize="@dimen/size_13" />

        <ListView
            android:id="@+id/searchList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:cacheColorHint="#00000000"
            android:divider="@drawable/banner_border_bottom"
            android:dividerHeight="1dp"
            android:padding="0dp"
            android:scrollbars="none" >
        </ListView>

        <TextView
            android:id="@+id/clearSearchHistory"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/search_clear"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/clearHistory"
            android:textColor="@color/white"
            android:textSize="@dimen/size_13" />
    </LinearLayout>
    
     <TextView
            android:id="@+id/tvNoSearchHistory"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
             android:layout_below="@+id/tttop"
            android:padding="10dp"
            android:text="@string/nohistory"
            android:textColor="@color/color_333"
            android:textSize="@dimen/size_13"
            android:visibility="gone"
             />
</RelativeLayout>